[package]
name = "ubuntu-buildflags"
version = "0.1.0"
edition = "2024"
authors = ["Varun Varma <varun.varma@canonical.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
reqwest = {version = "0.13", features = ["query", "json"]}
tokio = { version = "1", features = ["full"] }
xz2 = "0.1"
flate2 = "1.1.9"
